resources/tests/invalid_syntax/fn_ret_void.ct
//`Function 'hello' of return type 'void' cannot return a value!
//1
fn hello()->void {
  return 10;
}